--- a/css/index.css
+++ b/css/index.css
@@ -38,9 +38,12 @@ h1 {
   height: 50px;
   right: 1.5em;
   top: 7.18em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.img-innerdiv {
+.img-url {
   position: absolute;
   right: 0;
   top: 0;
@@ -53,17 +56,15 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
-.img-innerdiv:hover {
-  width: 100px;
+.img-url:hover {
+  background-color: #f8b36e;
 }
 
 .icon-img {
   position: relative;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
 }
 /*# sourceMappingURL=index.css.map */
