--- a/css/index.scss
+++ b/css/index.scss
@@ -35,9 +35,10 @@ h1 {
   height: 50px;
   right: 1.5em;
   top: 7.18em;
+  display: flex;
 }
 
-.img-innerdiv {
+.img-url {
   position: absolute;
   right: 0;
   top: 0;
@@ -48,18 +49,14 @@ h1 {
   border-radius: 2em;
   border: .1em solid black;
   display: flex;
-  transition: all .5s ease-in-out;
+  transition: all .3s ease-in-out;
 
   &:hover {
-    width: 100px;
+    background-color: rgb(248, 179, 110);
   }
+
 }
 
 .icon-img {
   position: relative;
-  transition: all .5s ease-in-out;
-
-  // &:hover {
-  //   transform: translate(-50px, 0);
-  // }
 }
